--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "uid": "^1.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
